Add token key property to yaml configuration

--- a/resources.yml
+++ b/resources.yml
@@ -15,3 +15,5 @@ Resources:
       link: https://www.google.com
     - title: Mag Evolution Devices
       link: https://www.google.com
+
+DiscordBotToken: InsertTokenKeyHere!
